--- a/css/header.css
+++ b/css/header.css
@@ -26,7 +26,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 0 0.5rem;
+  flex-direction: column;
+}
+
+.controls-parameters-stack p {
+  margin-bottom: 0.8rem;
 }
 
 .controls-algorithm-container {
@@ -38,7 +42,7 @@
 }
 
 .primary-input {
-  padding: 1rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   font-size: 1rem;
   border-radius: 10px;
 }
