--- a/css/visualizer.css
+++ b/css/visualizer.css
@@ -22,6 +22,15 @@
   height: 80%;
   background-color: rgb(231, 231, 231);
   border-radius: 10px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.bar-background {
+  background-color: #7e97ad;
+  padding: 10px;
+  color: white;
 }
 
 .visualizer-controls-container {
@@ -29,4 +38,14 @@
   align-items: center;
   justify-content: space-around;
   gap: 2rem;
+}
+
+.green-background {
+  background-color: #90ee90;
+}
+.red-background {
+  background-color: #ff6961;
+}
+.purple-background {
+  background-color: #b48fd9;
 }
